test/testFiles/fail/include_fail.fcl
#===========================================
# Testing Incorrect Include Statement Syntax
# What's Wrong: No space between #include and file name
# -- No Quotes around file name
# -- Valid!
#===========================================

#include"filename.ext"
